# docs/swagger.yaml
@@ -797,6 +797,13 @@ definitions:
     type: string
     x-enum-comments:
       AlertGroupStatusAcknowledged: User acknowledged, waiting for resolution
+    x-enum-descriptions:
+    - ""
+    - ""
+    - ""
+    - User acknowledged, waiting for resolution
+    - ""
+    - ""
     x-enum-varnames:
     - AlertGroupStatusNew
     - AlertGroupStatusProcessing
@@ -1048,6 +1055,9 @@ definitions:
     x-enum-comments:
       TeamMemberRoleAdmin: Team administrator
       TeamMemberRoleMember: Regular team member
+    x-enum-descriptions:
+    - Team administrator
+    - Regular team member
     x-enum-varnames:
     - TeamMemberRoleAdmin
     - TeamMemberRoleMember
@@ -1130,6 +1140,9 @@ definitions:
     x-enum-comments:
       UserRoleAdmin: Full system access
       UserRoleUser: Standard authenticated user (default)
+    x-enum-descriptions:
+    - Full system access
+    - Standard authenticated user (default)
     x-enum-varnames:
     - UserRoleAdmin
     - UserRoleUser
@@ -1759,6 +1772,10 @@ paths:
           description: Not Found
           schema:
             $ref: '#/definitions/api.ErrorResponse'
+        "409":
+          description: the integration is being changed by another request; retry
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -1822,6 +1839,10 @@ paths:
             $ref: '#/definitions/api.ErrorResponse'
         "404":
           description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "409":
+          description: the integration is being changed by another request; retry
           schema:
             $ref: '#/definitions/api.ErrorResponse'
         "500":
